<resources>
    <string name="app_name">PBL</string>

    <string name="naver_login">네이버계정으로 로그인</string>
    <string name="kakao_login">카카오계정으로 로그인</string>
    <string name="google_login">구글계정으로 로그인</string>
    <string name="id">abc123</string>
    <string name="password">6자 이상의 비밀번호</string>
    <string name="ck_password">비밀번호 확인</string>
    <string name="wrong_pw">비밀번호는 6자 이상이어야 합니다.</string>
    <string name="right_pw">사용가능한 비밀번호입니다.</string>
    <string name="ckpw_1">비밀번호가 일치하지 않습니다.</string>
    <string name="ckpw_2">비밀번호가 일치합니다.</string>
    <string name="log_in">로그인</string>
    <string name="log_out">로그아웃</string>
    <string name="sign_in">회원가입</string>
    <string name="edit">수정</string>
    <string name="del">삭제</string>
    <string name="cancle">취소</string>
    <string name="regist">등록</string>
    <string-array name="post_category">
        <item>[없음]</item>
        <item>[게임]</item>
        <item>[교육]</item>
        <item>[국내 중심]</item>
        <item>[서적]</item>
        <item>[스포츠]</item>
        <item>[신문고]</item>
        <item>[연애]</item>
        <item>[애니메이션]</item>
        <item>[음악]</item>>
        <item>[이슈]</item>
        <item>[자동차]</item>
        <item>[자연]</item>
        <item>[잡담]</item>
        <item>[취미]</item>
        <item>[학업]</item>
        <item>[해외 중심]</item>
    </string-array>
</resources>