<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#5CB134">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="274dp"
            android:layout_height="50dp"
            android:backgroundTint="#F6E751"
            android:drawableLeft="@drawable/kakaoxml"
            android:text="@string/kakao_login"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="274dp"
            android:layout_height="50dp"
            android:backgroundTint="#06BE1A"
            android:drawableLeft="@drawable/naverxml"
            android:text="@string/naver_login"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="274dp"
            android:layout_height="50dp"
            android:backgroundTint="#4383F3"
            android:drawableLeft="@drawable/googlexml"
            android:text="@string/google_login"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="#00FF0000"
            android:backgroundTint="#FFFFFF"
            android:text="@string/log_in"
            android:textColor="#777777"
            android:textSize="12sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="#00FF0000"
            android:text="@string/sign_in"
            android:textColor="#777777"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>