<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#5CB134">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="274dp"
            android:layout_height="50dp"
            android:background="#CCCCCC"
            android:hint="@string/email"
            android:textColor="#777777"
            android:textSize="16sp"
            android:layout_margin="1dp"/>

        <EditText
            android:layout_width="274dp"
            android:layout_height="50dp"
            android:background="#CCCCCC"
            android:hint="@string/password"
            android:textColor="#777777"
            android:textSize="16sp"
            android:layout_margin="1dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:background="#00FF0000"
            android:backgroundTint="#FFFFFF"
            android:text="@string/wrong_pw"
            android:textColor="#777777"
            android:textSize="12sp" />
        <EditText
            android:layout_width="274dp"
            android:layout_height="50dp"
            android:background="#CCCCCC"
            android:hint="@string/ck_password"
            android:textColor="#777777"
            android:textSize="16sp"
            android:layout_margin="1dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:background="#00FF0000"
            android:backgroundTint="#FFFFFF"
            android:text="@string/ckpw_1"
            android:textColor="#777777"
            android:textSize="12sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:backgroundTint="#EEEEEE"
            android:text="@string/sign_in"
            android:textColor="#777777"
            android:textSize="12sp" />


    </LinearLayout>
</LinearLayout>