<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#5CB134">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/idInput"
            android:layout_width="274dp"
            android:layout_height="50dp"
            android:layout_margin="1dp"
            android:background="#CCCCCC"
            android:hint="@string/id"
            android:textColor="#777777"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="274dp"
            android:layout_height="50dp"
            android:layout_margin="1dp"
            android:background="#CCCCCC"
            android:hint="@string/password"
            android:textColor="#777777"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="#00FF0000"
            android:backgroundTint="#FFFFFF"
            android:text="@string/log_in"
            android:textColor="#777777"
            android:textSize="12sp" />

        <!--        <Button-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="36dp"-->
<!--            android:background="#00FF0000"-->
<!--            android:text="비밀번호 찾기"-->
<!--            android:textColor="#777777"-->
<!--            android:textSize="12sp" />-->

    </LinearLayout>
</LinearLayout>